tests/helm/iperf3-noistio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: iperfraw
spec:
  hosts:
  - "iperf3raw.{{ .Values.domain }}"
  gateways:
  - istio-gateway
  tcp:
  - route:
    - destination:
        host: iperf3-raw.test.svc.cluster.local
        port:
          number: 5202
---
apiVersion: v1
kind: Service
metadata:
  name: iperf3-raw
spec:
  ports:
  - name: tcp1
    port: 5202
    targetPort: 5202
  selector:
    app: iperf3-raw
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iperf3-raw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iperf3-raw
  template:
    metadata:
      labels:
        app: iperf3-raw
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - image: docker.io/networkstatic/iperf3
        imagePullPolicy: IfNotPresent
        name: iperf3-raw
        ports:
        - containerPort: 5202
        args:
        - '-s'
        - '-p'
        - '5202'
        resources:
          requests:
            cpu: 1000m
            memory: "1G"
          limits:
            cpu: 1000m
            memory: "2G"
