tests/helm/split10-90.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fortio
spec:
  hosts:
  - fortio.v10.istio.webinf.info
  http:
  - route:
    # service selects multiple deployments, has 2 subsets
    - destination:
        host: fortio.test.svc.cluster.local
        port:
          number: 8080
